--- a/html_practice.html
+++ b/html_practice.html
@@ -28,6 +28,9 @@
         <li>ローリエ ２枚</li>
         <li>市販のカレー粉（２種類合わせて）１箱分</li>
       </ul>
+    </section>
+
+    <section>
       <h2>調味料</h2>
       <ul>
         <li>ガラムマサラ 大２</li>
@@ -66,15 +69,15 @@
 
     <section>
       <h2>コメント</h2>
-      <section>
+      <div>
         <p>うちでも試してみました。とても美味しかったです。ありがとうございます。<br>
-        <strong>投稿者 岩鬼正美さん</strong></p>
-      </section>
-    
-      <section>
+        <b>投稿者 岩鬼正美さん</b></p>
+      </div>
+
+      <div>
         <p>うちの息子も野菜嫌いなのですが、このカレーは美味しく何度もおかわりしてました。<br>
-        <strong>投稿者 殿馬数人さん</strong></p>
-      </section>    
+        <b>投稿者 殿馬数人さん</b></p>
+      </div>  
     </section>
   </article>
 </body>
